<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderCompleteActivity">

    <ImageView
        android:id="@+id/imgOrderConfirmed"
        android:layout_width="match_parent"
        android:layout_height="100sp"
        android:layout_marginTop="200sp"
        app:srcCompat="@drawable/order_confirmed"
        tools:ignore="MissingConstraints"/>

    <!-- Display payment method title -->
    <TextView
        android:id="@+id/orderConfirmationTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msgOrderConfirmed"
        android:fontFamily="sans-serif-condensed-medium"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_below="@id/imgOrderConfirmed"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/thankYouTextView"
        android:layout_width="350sp"
        android:layout_height="wrap_content"
        android:text="@string/msgThankYou"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_marginTop="10sp"
        android:layout_below="@id/orderConfirmationTextView"
        android:layout_centerHorizontal="true"
        android:gravity="center_vertical" />


    <!-- Submit button -->
    <Button
        android:id="@+id/btnBackToHome"
        android:layout_width="350sp"
        android:layout_height="60sp"
        android:text="@string/btnBackToHome"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="@color/primary"
        android:layout_marginTop="20sp"
        android:layout_marginBottom="20sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>